# BeautyModel-Lab

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  requirements.txt
BeautyQA-TrendAgent/: 项目需求.md  (+2 more)
BeautyQA-TrendAgent/backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
BeautyQA-TrendAgent/backend/alembic/: env.py
BeautyQA-TrendAgent/backend/alembic/versions/: 4c2b2af7a1d2_add_runtime_batch_tracking.py  98d4a7b21f33_add_expansion_registry_and_query_state.py  b31ce6892e4b_add_series_and_batch_item_recovery.py
BeautyQA-TrendAgent/backend/app/: main.py
BeautyQA-TrendAgent/backend/app/agents/: base.py  cleaning_agent.py  crawler_agent.py  keyword_expander_agent.py  scheduler_agent.py  signal_agent.py
BeautyQA-TrendAgent/backend/app/config/: settings.py
BeautyQA-TrendAgent/backend/app/tasks/: celery_app.py  clean_tasks.py  crawl_tasks.py  schedule_tasks.py
BeautyQA-TrendAgent/backend/data/samples/: int004_int005_backtest_report.md  int005_completion_classification_fix_backtest.json  int005_recovery_backtest_sample.json  int005_recovery_runtime_demo.json  int005_recovery_runtime_demo_note.md  runtime_smoke_readiness_report.json  runtime_smoke_readiness_report.md  sample_trend_signal_ta001.json  ta001_backtest_report.md  ta002_backtest_report.md  ta003_backtest_report.json  ta003_backtest_report.md  ta003_scheduler_backtest_report.json  ta003_scheduler_backtest_report.md  ta004_ta005_backtest_report.md  ta004_ta005_examples.json  trendagent_vendor_contract_check_report.json  trendagent_vendor_contract_check_report.md
(+298 files in other folders)
